@@ -1,11 +1,0 @@
-<h1>New opportunity</h1>
-
-<% form_for(@opportunity) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', opportunities_path %>
