@@ -1,0 +1,84 @@
+- content_for :stylesheet_link do
+  = stylesheet_link_tag "calendar_date_select/default.css", :cache => true
+- content_for :javascript_include do
+  = javascript_include_tag "calendar_date_select/calendar_date_select.js", :cache => true
+  = javascript_include_tag "calendar_date_select/format_american.js", :cache => true
+- content_for :javascript_epilogue do
+  %script{:type => "text/javascript"}
+    :plain
+      function submit_form() {
+        $("opportunity_assigned_to").value = $F("account_assigned_to");
+      }
+    crm.date_select_popup("opportunity_closes_on");
+    = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
+    $("opportunity_name").focus();
+
+.form
+  - form_for(@opportunity) do |f|
+    = f.hidden_field :user_id
+    = f.hidden_field :assigned_to
+    .title Create Opportunity
+    = f.error_messages
+    .section
+      %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
+        %tr
+          %td{ :valign => :top }
+            .label.req.top Name:
+            = f.text_field :name, :style => "width:325px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label.req.top Stage:
+            = f.select :stage, Setting.opportunity_stage.invert.sort, { :selected => @opportunity.stage.to_sym }, { :style => "width:160px" }
+
+      %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
+        %tr
+          %td{ :valign => :top }
+            .label Close date:
+            = f.text_field :closes_on, :style => "width:110px;", :autocomplete => :off
+          %td= spacer
+          %td{ :valign => :top }
+            .label Probability (%):
+            = f.text_field :probability, :style => "width:110px; text-align:right;"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Amount ($):
+            = f.text_field :amount, :style => "width:110px; text-align:right;"
+          %td= spacer
+          %td{ :valign => :top }
+            .label Discount ($):
+            = f.text_field :discount, :style => "width:110px; text-align:right;"
+
+      - fields_for(@account) do |a|
+        = a.hidden_field :user_id
+        = a.hidden_field :access
+        %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+          %tr
+            %td{ :valign => :top }
+              .label
+                Account
+                %span#account_selector
+              = collection_select :account, :id, @accounts, :id, :name, { :selected => @account.id || 0 }, { :style => "width:330px; display:none;" }
+              = a.text_field :name, :style => "width:324px; display:none;"
+            %td= spacer
+            %td{ :valign => :top }
+              .label.req Assigned to:
+              = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
+
+    = render :partial => "permissions", :locals => { :f => f }
+    .buttonbar
+      = f.submit "Create Opportunity", :onclick => "submit_form()"
+      or
+      = link_to "Cancel", opportunities_url
+
+
+/ <h1>New opportunity</h1>
+/ 
+/ <% form_for(@opportunity) do |f| %>
+/   <%= f.error_messages %>
+/ 
+/   <p>
+/     <%= f.submit "Create" %>
+/   </p>
+/ <% end %>
+/ 
+/ <%= link_to 'Back', opportunities_path %>
